# savannah_engineering

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run.sh  writeUp.txt
dags/: etl_pipeline_dag.py
data/cleaned/: cleaned_carts.csv  cleaned_products.csv  cleaned_users.csv
data/insights/: cart_details.csv  category_summary.csv  user_summary.csv
data/jsons/: carts.json  products.json  users.json
notebooks/: clean_data.ipynb  extract_data.ipynb  generate_insights.ipynb
scripts/: clean_data.py  extract_data.py  generate_insights.py
