[tool.poetry]
name = "savannah"
version = "0.1.0"
description = ""
authors = ["foscraft <anyaribari@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.2.3"
requests = "^2.32.3"
psycopg2-binary = "^2.9.10"
apache-airflow = "2.6.1"
jupyter = "^1.1.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
